feat(spring-swagger-codegen-3): add user api
